# oneinch-orderflow-analysis

./: .gitignore  7702_delegated_unique.txt  Cargo.toml  README.md  eoa_7702_resolved.csv  eoa_sample_100.csv  export.json  gen_user_buckets.py  get_unlabeled_users.py  unlabeled_users.txt  users.txt
.github/workflows/: github-pages.yml
data/github_pages/: integrator_recipients.json
dune/: eip7702_values_from_local.sql  eip7702_values_top200.sql
dune/queries/: 00_flashbots_reference.sql  01_orderflow_view.sql  02_liquidity_view.sql  03_frontend_resolver.sql  04_topn_pairs.sql  05_volume_timeseries.sql  06_wallet_app.sql  07_1inch_sankey.sql  08_integrator_txs.sql  1.py  10_1inch_integrators_7d_live.sql  11_integrators_classic_router_hashes.sql
samples/: 1inch_Integrators.csv  deBridge_Frontend.csv  integrator_fee_recipients.csv  v5_swap_with_fee.hex  v6_swap_with_fee.hex
scripts/: aggregate_integrator_recipients.py  build_github_pages.sh  build_integrator_recipient_sankey.py
src/: cli.rs  main.rs  paths.rs  snapshot.rs
src/dune/: cache.rs  client.rs  config.rs  mod.rs
src/model/: mod.rs  sankey.rs
src/web/: mod.rs  server.rs
web/: app.js  data-api.js  eoa.html  eoa.js  index.html  integrators.html  integrators.js  site.css  user_buckets.json  users.html
