[package]
name = "oneinch-orderflow"
version = "0.1.0"
edition = "2021"
default-run = "orderflow"
description = "1inch Router orderflow dashboard — Dune → SQLite → ECharts Sankey"
license = "MIT"
repository = "https://github.com/example/oneinch-orderflow"
readme = "README.md"

[dependencies]
anyhow = "1.0"
axum = "0.7"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "time", "sync"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "orderflow"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
